<!--
  ~ Copyright (c) 2015 huwentao (vernon.huwt@gmail.com)
  -->

<resources>
    <string name="app_name">开心家教</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">展开</string>
    <string name="drawer_close">关闭</string>
    <string name="icon_find_text">找老师</string>
    <string name="icon_review_text">推荐</string>
    <string name="icon_course_text">课程</string>
    <string name="icon_discover_text">发现</string>
    <string name="courseWeekType">本周课程</string>
    <string name="courseMonthType">本月课程</string>
    <string name="findDetailTitle">家长要求</string>
    <string name="parentCommunication">家长专区</string>
    <string name="seniority">教龄</string>
    <string name="studentAge">学生年龄</string>
    <string name="subject">科目</string>
    <string name="cost">费用</string>
    <string name="contactWay">联系方式</string>
    <string name="location">位置</string>
    <string name="parentAskFor">家长要求</string>
    <string name="drawer_myinfo">个人信息</string>
    <string name="drawer_myteacher">我的老师</string>
    <string name="drawer_myCondition">我的需求</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_myHomework">课后练习</string>
    <string name="teacherCommunication">老师专区</string>
    <string name="communication">随便聊</string>
    <string name="studyInfo">学习资讯</string>
    <string name="findTeacher">找老师</string>
    <string name="action_message">消息</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_message">消息</string>
    <string name="settingAbout">关于我们</string>
    <string name="settingVersion">检查版本</string>
    <string name="settingAdvice">意见反馈</string>
    <string name="title_activity_about">关于我们</string>
    <string name="title_activity_advice">意见反馈</string>
    <string name="adviceTitle">开心家教用户体验反馈QQ群：666888</string>
    <string name="adviceHint">有什么问题，尽情的吐槽吧！</string>
    <string name="adviceUserHint">手机/QQ/邮箱</string>
    <string name="send">发送</string>
    <string name="cusServiceInfo">Copyright ©2015 开心教育版权所有</string>
    <string name="appNameDesc">开心家教客户端</string>
    <string name="appVersionDesc">版本：1.0.0</string>
    <string name="title_activity_teacher">老师信息</string>
    <string name="title_activity_loading">开心家教</string>
    <string name="skip">跳过</string>
    <string name="title_activity_login">登录</string>
    <string name="loginInputLoginId">登录账号</string>
    <string name="loginInputPasswd">账号密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="companyName">湖南开心教育科技有限公司</string>
    <string name="title_activity_parent">我的信息</string>
    <string name="title_activity_my_homework">课后练习</string>
    <string name="title_activity_my_teacher">我的老师</string>
    <string name="title_activity_my_course_need">我的需求</string>
    <string name="title_activity_add_new_course">新增课程</string>
    <string name="title_activity_register">注册</string>
    <string name="userName">您的名字</string>
    <string name="userPhoneNum">手机号</string>
    <string name="userAgent">性别</string>
    <string name="commit">提交</string>
    <string name="icon_person_text">我的</string>
    <string name="title_activity_parent_ask">家长要求</string>
    <string name="title_activity_near_teacher">附近老师</string>
    <string name="action_message_week">本周课程</string>
    <string name="action_message_month">本月课程</string>
    <string name="drawer_myStudentHomework">学生作业</string>
    <string name="drawer_studentParent">学生家长</string>
    <string name="findMapNearTeacher">附近老师</string>
    <string name="findMapNearParent">附近家长</string>
    <string name="communicationTitle">家长帮</string>
    <string name="other">其他</string>
    <string name="more">更多</string>
    <string name="drawer_myCourses">我的课程</string>
    <string name="title_activity_student_homework">学生作业</string>
    <string name="title_activity_my_course">我的课程</string>
    <string name="title_activity_student_parent">学生家长</string>
    <string name="action_addNewCourse">新增课程</string>
    <string name="action_course">课程</string>
    <string name="title_activity_near_parent">附近家长</string>
    <string name="title_activity_study_info">StudyInfoActivity</string>
    <string name="title_activity_parent_talk">ParentTalkActivity</string>
    <string name="title_activity_teacher_talk">TeacherTalkActivity</string>
    <string name="title_activity_communication">CommunicationActivity</string>
    <string name="title_activity_test_login">TestLoginActivity</string>
    <string name="title_activity_wbshare">WBShareActivity</string>
</resources>
