<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/studyInfo"
            android:icon="@drawable/icon_book"
            android:title="@string/studyInfo"
            app:showAsAction="withText|ifRoom"/>
        <item
            android:id="@+id/parentCommunication"
            android:icon="@drawable/icon_parent"
            android:title="@string/parentCommunication"
            app:showAsAction="withText|ifRoom"/>
        <item
            android:id="@+id/teacherCommunication"
            android:icon="@drawable/icon_teacher"
            android:title="@string/teacherCommunication"
            app:showAsAction="withText|ifRoom"/>
        <item
            android:id="@+id/communication"
            android:icon="@drawable/icon_communication"
            android:title="@string/communication"
            app:showAsAction="withText|ifRoom"/>
    </group>


</menu>