<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="www.ht.com.app.ui.activity.AdviceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:text="@string/adviceTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_borde_blacklight"
        android:hint="@string/adviceHint"
        android:lines="6"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_borde_blacklight"
        android:hint="@string/adviceUserHint"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:padding="10dp"/>

    <Button
        style="@style/YellowButton"
        android:layout_marginTop="8dp"
        android:text="@string/send"/>
</LinearLayout>
